[gd_scene load_steps=25 format=3 uid="uid://cup7nrj6xgw6"]

[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/fairy/fairy.gd" id="1_ml772"]
[ext_resource type="Resource" uid="uid://cgcq5rx3po7d7" path="res://scenes/game_object/player/priest/prieststat.tres" id="2_2hi06"]
[ext_resource type="Texture2D" uid="uid://6tp1fnkd2iao" path="res://scenes/game_object/basic_enemy/fairy/fairy.png" id="4_rvnq1"]
[ext_resource type="Texture2D" uid="uid://bfb2xxvvmnf7x" path="res://scenes/game_object/basic_enemy/fairy/fairy1.png" id="4_vcqan"]
[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/base_unit/StateMachine.gd" id="5_dxcvj"]
[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/fairy/fairy_idle.gd" id="6_8ofny"]
[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/fairy/fairy_attack.gd" id="7_yesph"]
[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/fairy/fairy_get_dmg.gd" id="8_ax4hg"]
[ext_resource type="PackedScene" uid="uid://c2bkhyluhofrn" path="res://scenes/component/health_component.tscn" id="8_ef0ic"]
[ext_resource type="Script" path="res://receiver_component_2.gd" id="9_x8aux"]
[ext_resource type="PackedScene" uid="uid://esxoqn07bwbk" path="res://scenes/game_object/dmgnumber/dmg_popup.tscn" id="10_nxjdk"]
[ext_resource type="Texture2D" uid="uid://bhuhfqi6uctrc" path="res://scenes/game_object/basic_enemy/fairy/Sprite-0031.png" id="12_b5cqn"]
[ext_resource type="Texture2D" uid="uid://bwrmj13d52yv8" path="res://scenes/game_object/basic_enemy/fairy/jkojo.png" id="13_amg4y"]
[ext_resource type="Texture2D" uid="uid://d1aj064jwfqnx" path="res://scenes/game_object/basic_enemy/fairy/opp.png" id="14_f4h53"]
[ext_resource type="Texture2D" uid="uid://beb8cwx3t4wb2" path="res://scenes/game_object/basic_enemy/fairy/Sprite-0003.png" id="15_omcj2"]
[ext_resource type="Texture2D" uid="uid://by5iwjbut0wcc" path="res://scenes/game_object/basic_enemy/fairy/Sprite-0003-Recovered1.png" id="16_obogw"]
[ext_resource type="Texture2D" uid="uid://c40qy8d21bpql" path="res://scenes/game_object/basic_enemy/fairy/Sprite-0001.png" id="17_otjr0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvo4f"]
size = Vector2(20, 22)

[sub_resource type="Animation" id="Animation_27tym"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wing:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wing:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wing:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Fairy1:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Fairy1:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_o25dn"]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fairy1:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_plfg4"]
resource_name = "charge"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wing:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, 0), Vector2(0, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wing:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_l3t5j"]
resource_name = "get_dmg"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wing:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00178907),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00178907),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wing:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.00178907, 0.053672, 0.0983987, 0.152071, 0.200375, 0.250469, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fairy1:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_auooq"]
resource_name = "idle"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wing:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, -31), Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wing:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wing:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Fairy1:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -14), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Fairy1:frame_coords")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nf3wh"]
_data = {
"RESET": SubResource("Animation_27tym"),
"attack": SubResource("Animation_o25dn"),
"charge": SubResource("Animation_plfg4"),
"get_dmg": SubResource("Animation_l3t5j"),
"idle": SubResource("Animation_auooq")
}

[node name="Fairy" type="CharacterBody2D"]
script = ExtResource("1_ml772")
stat = ExtResource("2_2hi06")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -131)
shape = SubResource("RectangleShape2D_wvo4f")

[node name="wing" type="Sprite2D" parent="."]
position = Vector2(-1, -129)
texture = ExtResource("4_rvnq1")
offset = Vector2(0, -14)
hframes = 3
vframes = 2
frame = 2

[node name="Fairy1" type="Sprite2D" parent="."]
position = Vector2(0, -145)
texture = ExtResource("4_vcqan")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nf3wh")
}

[node name="StateMachine2" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_dxcvj")
initial_state = NodePath("FairyIdle")

[node name="FairyIdle" type="Node" parent="StateMachine2"]
script = ExtResource("6_8ofny")
state_type = "idle"

[node name="FairyCharge" type="Node" parent="StateMachine2"]

[node name="FairyAttack" type="Node" parent="StateMachine2"]
script = ExtResource("7_yesph")
state_type = "attack"

[node name="FairyGetDMG" type="Node" parent="StateMachine2"]
script = ExtResource("8_ax4hg")
state_type = "get_dmg"

[node name="HealthComponent" parent="." instance=ExtResource("8_ef0ic")]
position = Vector2(0, -120)

[node name="ReceiverComponent2" type="Node" parent="." node_paths=PackedStringArray("state_machine_component", "state", "health_component")]
script = ExtResource("9_x8aux")
state_machine_component = NodePath("../StateMachine2")
state = NodePath("../StateMachine2/FairyGetDMG")
health_component = NodePath("../HealthComponent")
damage_popup = ExtResource("10_nxjdk")

[node name="Sprite-0031" type="Sprite2D" parent="."]
position = Vector2(-191, -75)
texture = ExtResource("12_b5cqn")

[node name="Jkojo" type="Sprite2D" parent="."]
position = Vector2(-170, -296)
texture = ExtResource("13_amg4y")

[node name="Opp" type="Sprite2D" parent="."]
position = Vector2(53, -134)
texture = ExtResource("14_f4h53")

[node name="Sprite-0003" type="Sprite2D" parent="."]
position = Vector2(137, -140)
texture = ExtResource("15_omcj2")

[node name="Sprite-0003-recovered1" type="Sprite2D" parent="."]
position = Vector2(-3, -119)
texture = ExtResource("16_obogw")

[node name="Sprite-0001" type="Sprite2D" parent="."]
position = Vector2(0, -210)
texture = ExtResource("17_otjr0")
